src/objects/Credential__c.object
<CustomObject>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>App_Code__c</fullName>
        <label>App Code</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <inlineHelpText>The base endpoint for the service.</inlineHelpText>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>